# Orchidae

./: .gitignore  basic.md  lelab_inspo.md  lerobot_cheatsheet.md  lerobot_integration_flow.md  pixi.toml  poznamky.md  pyproject.toml  pyrightconfig.json
design_test/lovable-project-b9be868a-fa78-4a7f-9075-3b9a76347d61-2026-05-31/src/: styles.css
design_test/lovable-project-b9be868a-fa78-4a7f-9075-3b9a76347d61-2026-05-31/src/routes/: __root.tsx  index.tsx
resources/default_configs/: default_safety.json  soarm101.json
src/orchiday/: __init__.py  main.py  server.py  web_events.py
src/orchiday/ai/: lerobot_bridge.py  llm_planner.py  lm_studio_client.py  orchiday_inference.py  vlm_inspector.py
src/orchiday/core/: __init__.py  calibration_manager.py  config.py  constants.py  controller.py  dataset_splitter.py  events.py  portability.py  project_manager.py
src/orchiday/hardware/: camera_utils.py  camera_worker.py  detection.py  safety_filters.py
src/orchiday/orchestration/: orchestrator.py  run_logger.py
src/orchiday/ui/: __init__.py  main_window.py
src/orchiday/ui/dialogs/: __init__.py  calibration_import_dialog.py  dataset_validator_dialog.py  new_project_dialog.py  settings_dialog.py
src/orchiday/ui/panels/: __init__.py  calibration_panel.py  camera_panel.py  console_panel.py  dashboard_panel.py  model_panel.py  (+4 more)
tests/: test_calibration_manager.py  test_lerobot_commands.py  test_lerobot_version_compat.py  test_plan_resolver.py  test_safety_filters.py  test_scene_description.py
web/: app.js  app.ts  i18n.js  index.html  styles.css  tsconfig.json
(+6 files in other folders)
